--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
     "edt>=3.0.0",
     "matplotlib>=3.10.1",
     "monai>=1.4.0",
+    "napari[all]>=0.5.6",
+    "onnx>=1.17.0",
+    "onnxruntime>=1.21.0",
     "opencv-python-headless>=4.11.0.86",
     "pandas>=2.2.3",
     "prefetch-generator>=1.0.3",
