--- a/config.yaml
+++ b/config.yaml
@@ -1,21 +1,17 @@
-# Nora 
+nora: 
 
-VAL_DIR: "/nfs/data/nii/data1/Analysis/GPUnet/ANALYSIS_incontext/SegFM3D/data"
-RESULTS_DIR: "/nfs/data/nii/data1/Analysis/GPUnet/ANALYSIS_incontext/SegFM3D/results"
+  DATA_DIR: "/nfs/data/nii/data1/Analysis/GPUnet/ANALYSIS_incontext/SegFM3D/data"
+  RESULTS_DIR: "/nfs/data/nii/data1/Analysis/GPUnet/ANALYSIS_incontext/SegFM3D/results"
+  SAM_CKPT_PATH: "/nfs/norasys/notebooks/camaret/SAM-Med3D/ckpt/sam_med3d_turbo_bbox_cvpr.pth"
+  SAM_REPO_DIR: "/nfs/norasys/notebooks/camaret/SAM-Med3D"
+  ONNX_MODEL_PATH: "/nfs/norasys/notebooks/camaret/model_inference/models/sammed3d.onnx"
+  NNINT_CKPT_DIR : "/nfs/norasys/notebooks/camaret/model_checkpoints/nnint"
 
-SAM_CKPT_PATH: "/nfs/norasys/notebooks/camaret/SAM-Med3D/ckpt/sam_med3d_turbo_bbox_cvpr.pth"
-SAM_REPO_DIR: "/nfs/norasys/notebooks/camaret/SAM-Med3D"
+meta: 
 
-ONNX_MODEL_PATH: "/nfs/norasys/notebooks/camaret/model_inference/models/sammed3d.onnx"
-
-NNINT_CKPT_DIR : "/nfs/norasys/notebooks/camaret/model_checkpoints/nnint"
-
-# Meta 
-
-# VAL_DIR: "/work/dlclarge2/ndirt-SegFM3D/data"
-# RESULTS_DIR: "/work/dlclarge2/ndirt-SegFM3D/segfm3d_nora_team/results"
-
-# SAM_CKPT_PATH: "/work/dlclarge2/ndirt-SegFM3D/repos/SAM-Med3D/ckpt/sam_med3d_turbo_bbox_cvpr.pth"
-# SAM_REPO_DIR: "/work/dlclarge2/ndirt-SegFM3D/repos/SAM-Med3D"
-
-# ONNX_MODEL_PATH: "/work/dlclarge2/ndirt-SegFM3D/segfm3d_nora_team/results/sammed3d_onnx/sammed3d_v0_2.onnx"
+  DATA_DIR: "/work/dlclarge2/ndirt-SegFM3D/segfm3d_nora_team/data"
+  RESULTS_DIR: "/work/dlclarge2/ndirt-SegFM3D/segfm3d_nora_team/results"
+  SAM_CKPT_PATH: "/work/dlclarge2/ndirt-SegFM3D/repos/SAM-Med3D/ckpt/sam_med3d_turbo_bbox_cvpr.pth"
+  SAM_REPO_DIR: "/work/dlclarge2/ndirt-SegFM3D/repos/SAM-Med3D"
+  ONNX_MODEL_PATH: "/work/dlclarge2/ndirt-SegFM3D/segfm3d_nora_team/results/sammed3d_onnx/sammed3d_v0_2.onnx"
+  NNINT_CKPT_DIR : "/work/dlclarge2/ndirt-SegFM3D/model_checkpoints/nnint"
