--- a/docker_context_final/DockerfileOptimized
+++ b/docker_context_final/DockerfileOptimized
@@ -4,8 +4,10 @@ WORKDIR /workspace
 
 ARG PIP_NO_CACHE_DIR=1
 
-## Install dependencies
-# RUN pip install numpy torch scikit-image connected-components-3d
+## thosse point to nothing, its only to silence the nnUNet warnings
+ENV nnUNet_raw="/workspace/nnUNet_raw"
+ENV nnUNet_preprocessed="/workspace/nnUNet_preprocessed" 
+ENV nnUNet_results="/workspace/nnUNet_results"
 
 ## Copy dependencies
 # external dependencies
@@ -21,4 +23,4 @@ COPY model/ /workspace/model/
 COPY predict.sh /workspace/predict.sh
 COPY predict.py /workspace/predict.py
 
-RUN chmod +x /workspace/predict.sh && mkdir -p /workspace/inputs /workspace/outputs && chmod 777 /workspace/inputs /workspace/outputs&& apt-get clean && rm -rf /var/lib/apt/lists/*
+RUN chmod +x /workspace/predict.sh && mkdir -p /workspace/inputs /workspace/outputs && apt-get clean && rm -rf /var/lib/apt/lists/*
