--- a/experiments/sweep_config.yaml
+++ b/experiments/sweep_config.yaml
@@ -16,8 +16,10 @@ parameters:
     distribution: uniform
     min: 5
     max: 20
-  accumulate_batch_size:
-    values: [4, 8, 16]
+  n_max_clicks:
+    distribution: int_uniform
+    min: 1
+    max: 10
 
 ## Initialize sweep
 # wandb sweep --project segfm3d_nora_team experiments/sweep_config.yaml
