reorganize docker folder

--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,20 @@
 /results
 /data
 /wandb
-/docker_images/
-/docker_context/model
-/docker_context_final/model
-/docker_submission/data
-/docker_submission/outputs
-/docker_submission/inputs
-/docker_submission/test/outputs
-/docker_submission/dist_linux
+
+/docker/docker_images/
+
+/docker/contexts/docker_context
+/docker/contexts/docker_context_final/model
+/docker/contexts/docker_context_final/nnInteractive
+
+
+/docker/docker_submission/data
+/docker/docker_submission/dist_linux
+/docker/docker_submission/outputs
+/docker/docker_submission/inputs
+/docker/docker_submission/test/outputs
+
 
 /singularity_submission/inputs
 __pycache__
